--- a/package.json
+++ b/package.json
@@ -6,5 +6,6 @@
         "coffee-script": "latest",
         "underscore": "latest",
         "socket.io": "latest"
+        "jade": "latest"
     }
 }
