--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
         "express": "latest",
         "coffee-script": "latest",
         "underscore": "latest",
-        "socket.io": "latest"
+        "socket.io": "latest",
         "jade": "latest"
     }
 }
